# PTMT

./: README.md
collector/: .gitignore  CMakeLists.txt  metrics.cc
data_scripts/: pg_trending.py
mldpp/: .gitignore  app_wrapper.py  collector.py  default_tune_with_ml.py  default_tuner.py  dnn_model.py  dnn_predictor.py  idt_train.py  idt_tune.py  install.sh  knn_model.py  mldpp.py  notune.py  one_default_tune.py  one_random_tune.py  predictor.py  predictor_v2.py  rl_predictor.py  rl_predictor_wo_pretrain.py  start_workload.py  tune_knn_sensitivity.py  tune_rl.py  tune_rl_online.py  tune_rl_wo_pretrain.py  tuner.py  tuner_dnn.py  tuner_hybrid.py  tuner_ipc.py  tuner_ipc_no_tnorm.py  tuner_v2.py  tuner_v2_ipc.py  tuner_v2_ipc_no_tnorm.py  utils.py  var.py
mldpp/idt/: experience.py  idt_action.py  idt_action_encoding.py  idt_driver.py  idt_reward.py  idt_state.py  infer.py  rl_config.py  train.py
mldpp/memmanagement/: autonuma.py  memtis.py  mldpp.py  notune.py  tiering08.py  tpp.py
run_scripts/: default_tune.sh  default_tune_with_ml.sh  idt_train.sh  idt_tune.sh  knn_sensitivity.sh  notune.sh  one_default_tune.sh  one_random_tune.sh  run.sh  tune.sh  tune_dnn.sh  tune_ipc.sh  tune_ipc_no_tnorm.sh  tune_rl.sh  tune_rl_online.sh  tune_rl_wo_pretrain.sh  tune_v2.sh  tune_v2_ipc.sh  tune_v2_ipc_no_tnorm.sh
run_scripts/bench_cmds/: BFS-Twitter-Wrapper.sh  BFS.sh  BFS_l.sh  BFS_s.sh  BFS_x.sh  BT.sh  BT_s.sh  BTree.sh  CG.sh  FT.sh  FT_s.sh  Graph500.sh  Graph500_s.sh  LU.sh  LU_s.sh  Liblinear.sh  Liblinear_s.sh  MG.sh  PARSEC3-canneal.sh  PARSEC3-dedup.sh  SP.sh  (+26 more)
(+18 files in other folders)
